try add coverall

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ go:
 
 before_install:
  - go get github.com/stretchr/testify/assert
+ - go get github.com/mattn/goveralls
 
 script:
  - go get -d -t -v ./...
@@ -15,3 +16,4 @@ script:
  - go test -a -tags bounds -x -v ./...
  - go test -a -tags noasm -x -v ./...
  - go test -a -tags appengine -x -v ./...
+ - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash .travis/test-coverage.sh; fi
